chore: Agregando configuraciones del proyecto

--- a/Stores.Sales.Backend.BusinessObjects/Stores.Sales.Backend.BusinessObjects.csproj
+++ b/Stores.Sales.Backend.BusinessObjects/Stores.Sales.Backend.BusinessObjects.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Stores.Sales.Entities\Stores.Sales.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
