chore: Agrego biblioteca de clases para repositorio  Changes to be committed: 	modified:   .gitignore 	new file:   Stores.Sales.Backend.EFCore/Stores.Sales.Backend.EFCore.csproj 	modified:   Stores.sln

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Stores.Sales.Entities/obj
 /Stores.Sales.Backend.BusinessObjects/obj
 /Stores.Sales.Backend.UseCases/obj
+/Stores.Sales.Backend.EFCore/obj/
