feat(repositories): Agrego el contexto de datos  Changes to be committed: 	new file:   Stores.Sales.Backend.EFCore/DataContexts/StoresContext.cs 	new file:   Stores.Sales.Backend.EFCore/GlobalUsings.cs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .vs/
 /Stores.Sales.Entities/obj
-/Stores.Sales.Backend.BusinessObjects/obj
-/Stores.Sales.Backend.UseCases/obj
+/Stores.Sales.Backend.BusinessObjects/obj/
+/Stores.Sales.Backend.UseCases/obj/
 /Stores.Sales.Backend.EFCore/obj/
+/Stores.Sales.Backend.BusinessObjects/bin/
+/Stores.Sales.Backend.EFCore/Migrations/
+/Stores.Sales.Backend.EFCore/bin/
+/Stores.Sales.Backend.UseCases/bin/
+/Stores.Sales.Entities/bin/
