--- a/Stores.Sales.Backend.UseCases/Stores.Sales.Backend.UseCases.csproj
+++ b/Stores.Sales.Backend.UseCases/Stores.Sales.Backend.UseCases.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Stores.Sales.Backend.BusinessObjects\Stores.Sales.Backend.BusinessObjects.csproj" />
+  </ItemGroup>
+
 </Project>
