--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 /Stores.Sales.Backend.BusinessObjects/obj/
 /Stores.Sales.Backend.UseCases/obj/
 /Stores.Sales.Backend.EFCore/obj/
+/Stores.Sales.Backend.Presenters/obj/
 /Stores.Sales.Backend.BusinessObjects/bin/
 /Stores.Sales.Backend.EFCore/Migrations/
 /Stores.Sales.Backend.EFCore/bin/
 /Stores.Sales.Backend.UseCases/bin/
 /Stores.Sales.Entities/bin/
+/Stores.Sales.Backend.Presenters/bin/
