feat(IoC): Agrego biblioteca para la Inversion de Control  Changes to be committed: 	modified:   .gitignore 	new file:   Stores.Sales.Backend.IoC/DependencyContainer.cs 	new file:   Stores.Sales.Backend.IoC/EndpointsContainer.cs 	new file:   Stores.Sales.Backend.IoC/GlobalUsings.cs 	new file:   Stores.Sales.Backend.IoC/Stores.Sales.Backend.IoC.csproj

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /Stores.Sales.Backend.EFCore/obj/
 /Stores.Sales.Backend.Presenters/obj/
 /Stores.Sales.Backend.Controllers/obj/
+/Stores.Sales.Backend.IoC/obj/
 /Stores.Sales.Backend.BusinessObjects/bin/
 /Stores.Sales.Backend.EFCore/Migrations/
 /Stores.Sales.Backend.EFCore/bin/
@@ -12,3 +13,4 @@
 /Stores.Sales.Entities/bin/
 /Stores.Sales.Backend.Presenters/bin/
 /Stores.Sales.Backend.Controllers/bin/
+/Stores.Sales.Backend.IoC/bin/
