fix: Arreglando configuracion de solucion y proyecto  Changes to be committed: 	modified:   Stores.Sales.Backend.Controllers/Stores.Sales.Backend.Controllers.csproj 	modified:   Stores.Sales.Backend.IoC/Stores.Sales.Backend.IoC.csproj 	modified:   Stores.sln

--- a/Stores.Sales.Backend.Controllers/Stores.Sales.Backend.Controllers.csproj
+++ b/Stores.Sales.Backend.Controllers/Stores.Sales.Backend.Controllers.csproj
@@ -10,4 +10,8 @@
 	<FrameworkReference Include="Microsoft.AspNetCore.app" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Stores.Sales.Backend.BusinessObjects\Stores.Sales.Backend.BusinessObjects.csproj" />
+  </ItemGroup>
+
 </Project>
